# Simu-alpine

./: .gitignore  guide_kseditor.md  how_to_mod.md  kb.ino  law_compte_rendu.md  local_telemetry.py  python_doc.md  setup.md  setup_local_server.md  setup_online_session.md  simu_kb_inputs.py  soft_setup.py  telemetry.md  telemetry_doc.md
assetto-server-linux-x64/cache/: AAE2953A03C4094D.aic1  AF24D0A39C701D11.aic1
assetto-server-linux-x64/cfg/: data_track_params.ini  entry_list.ini  extra_cfg.yml  server_cfg.ini
client/: Cargo.toml  Dioxus.toml  ac_telemetry
client/assets/: style.css  theme.css  toast.css
client/nix/: dx.nix  flake.nix
client/src/: api.rs  main.rs
client/src/views/: home.rs
sbw/: data.md  development_journal.md  plot_generator.py
sbw/ffb/: Cargo.toml  build.rs
sbw/ffb/src/: ac.rs  device.rs  main.rs  model.rs  window.rs
sbw/law/: .env  Cargo.toml  test.txt
sbw/law/.cargo/: config.toml
sbw/law/src/: ac.rs  data.rs  device.rs  main.rs  window.rs
sbw/nix/: flake.nix
server/: .env.dev  .gitignore  Cargo.toml
server/migrations/: 20250804171153_country.sql  20250804171818_status.sql  20250804174422_users.sql  20250804174428_challenges.sql  20250804174440_events.sql  20250804183230_events_challenges.sql
server/nix/: flake.nix
server/nix/shell/: project_banner.sh  run_db.sh
server/requests/: events.http  users.http
server/src/: config.rs
server/src/models/: telemetry.rs
server/src/server/: handler.rs  mod.rs  ws.rs
server/src/server/services/telemetry/: handlers.rs  routes.rs
swb/: ac_shared_mem.py  ac_shared_mem_x_simucube_vjoy.py  development_journal.md
swb/ffb/: .gitignore  Cargo.toml
swb/ffb/src/: ac.rs  bk.rs  device.rs  main.rs  window.rs
swb/nix/: flake.nix
