[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bincode = { version = "2.0.1", features = ["serde"] }
byteorder = "1.5.0"
dialoguer = "0.11.0"
git2 = "0.20.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.1"
tokio = "1.47.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
