[package]
name = "law"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
lazy_static = "1.5.0"
rand = "0.9.2"
vjoy-sys = "0.4.1"
winapi = { version = "0.3.9", features = ["dinput"] }

[dependencies.windows]
version = "0.62"
features = [
  "Data_Xml_Dom",
  "Win32_Security",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Com",
  "Win32_UI_Input",
  "Win32_Devices_HumanInterfaceDevice",
  "Win32_System_LibraryLoader",
  "Win32_Graphics_Gdi",
]
