[package]
name = "ffb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"

[dependencies.windows]
version = "0.62"
features = [
  "Data_Xml_Dom",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Com",
  "Win32_System_Console",
  "Win32_UI_Input",
  "Win32_Devices_HumanInterfaceDevice",
  "Win32_System_LibraryLoader",
]
